= Fix and refactor tests
- Removes huge amount of code duplication

== Renames AbstractTestParent to AbstractTest

Fix and refactor the file, removing code duplication and providing new methods for test classes.

== Fix and refactor TagTest
== Fix and refactor InterfaceTest
== Fix and refactor Methods Tests

- Split tests for each Method file inside the simpledata package into different test classes
- Create AbstractMethodTest class to provide utility methods to remove the huge amount of code duplication

== Renames files Method1.java, Method2.java and Method3.java to MethodsA, MethodsB and MethodsC

Since files such as Method1 has methods named method1, method2 and so on, while file Method2 has methods with the same names, that was causing confusion.

Signed-off-by: Manoel Campos <manoelcampos@gmail.com>