@@ -1,48 +1,33 @@
 package com.github.markusbernhardt.xmldoclet;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNull;
-
-import org.junit.Test;
-
 import com.github.markusbernhardt.xmldoclet.simpledata.Annotation12;
 import com.github.markusbernhardt.xmldoclet.xjc.AnnotationArgument;
 import com.github.markusbernhardt.xmldoclet.xjc.AnnotationInstance;
 import com.github.markusbernhardt.xmldoclet.xjc.Enum;
 import com.github.markusbernhardt.xmldoclet.xjc.EnumConstant;
-import com.github.markusbernhardt.xmldoclet.xjc.Package;
-import com.github.markusbernhardt.xmldoclet.xjc.Root;
+import org.junit.Test;
+
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertNull;
 
 /**
  * Unit test group for Enumerations
  */
-public class EnumTest extends AbstractTestParent {
-
-    /**
-     * Rigourous Parser :-)
-     */
-    @Test
-    public void testSampledoc() {
-        executeJavadoc(".", new String[] {"./src/test/java"}, null, null, new String[] {"com"},
-                new String[] {"-dryrun"});
-    }
+public class EnumTest extends AbstractTest {
 
     /**
      * testing a simple enum
      */
     @Test
     public void testEnum1() {
-        String[] sourceFiles = new String[] {
-                "./src/test/java/com/github/markusbernhardt/xmldoclet/simpledata/Enum1.java"};
-        Root rootNode =
-                executeJavadoc(null, null, null, sourceFiles, null, new String[] {"-dryrun"});
-
-        Package packageNode = rootNode.getPackage().get(0);
-        Enum enumNode = packageNode.getEnum().get(0);
+        final var javaDocElements = newJavaDocElements("Enum1.java");
+        final var rootNode = javaDocElements.rootNode();
+        final var packageNode = javaDocElements.packageNode();
+        final Enum enumNode = packageNode.getEnum().getFirst();
 
         assertEquals(rootNode.getPackage().size(), 1);
         assertNull(packageNode.getComment());
-        assertEquals(packageNode.getName(), "com.github.markusbernhardt.xmldoclet.simpledata");
+        assertEquals(packageNode.getName(), SIMPLE_DATA_PACKAGE);
         assertEquals(packageNode.getAnnotation().size(), 0);
         assertEquals(packageNode.getEnum().size(), 1);
         assertEquals(packageNode.getInterface().size(), 0);
@@ -50,8 +35,7 @@ public class EnumTest extends AbstractTestParent {
 
         assertEquals(enumNode.getName(), "Enum1");
         assertEquals(enumNode.getComment(), "Enum1");
-        assertEquals(enumNode.getQualified(),
-                "com.github.markusbernhardt.xmldoclet.simpledata.Enum1");
+        assertEquals(enumNode.getQualified(), getElementPathFromSimpleDataPackage("Enum1"));
         assertEquals(enumNode.getConstant().size(), 3);
         assertEquals(enumNode.getConstant().get(0).getName(), "a");
         assertEquals(enumNode.getConstant().get(1).getName(), "b");
@@ -63,18 +47,13 @@ public class EnumTest extends AbstractTestParent {
      */
     @Test
     public void testEnum2() {
-        String[] sourceFiles = new String[] {
-                "./src/test/java/com/github/markusbernhardt/xmldoclet/simpledata/Enum2.java"};
-        Root rootNode =
-                executeJavadoc(null, null, null, sourceFiles, null, new String[] {"-dryrun"});
-
-        Package packageNode = rootNode.getPackage().get(0);
-        Enum enumNode = packageNode.getEnum().get(0);
+        final var javaDocElements = newJavaDocElements("Enum2.java");
+        final var packageNode = javaDocElements.packageNode();
+        final Enum enumNode = packageNode.getEnum().getFirst();
 
         assertEquals(enumNode.getName(), "Enum2");
         assertEquals(enumNode.getComment(), "Enum2");
-        assertEquals(enumNode.getQualified(),
-                "com.github.markusbernhardt.xmldoclet.simpledata.Enum2");
+        assertEquals(enumNode.getQualified(), getElementPathFromSimpleDataPackage("Enum2"));
         assertEquals(enumNode.getConstant().size(), 0);
     }
 
@@ -83,13 +62,9 @@ public class EnumTest extends AbstractTestParent {
      */
     @Test
     public void testEnum3() {
-        String[] sourceFiles = new String[] {
-                "./src/test/java/com/github/markusbernhardt/xmldoclet/simpledata/Enum3.java"};
-        Root rootNode =
-                executeJavadoc(null, null, null, sourceFiles, null, new String[] {"-dryrun"});
-
-        Package packageNode = rootNode.getPackage().get(0);
-        Enum enumNode = packageNode.getEnum().get(0);
+        final var javaDocElements = newJavaDocElements("Enum3.java");
+        final var packageNode = javaDocElements.packageNode();
+        final Enum enumNode = packageNode.getEnum().getFirst();
         assertEquals(enumNode.getComment(), "Enum3");
     }
 
@@ -98,15 +73,11 @@ public class EnumTest extends AbstractTestParent {
      */
     @Test
     public void testEnum4() {
-        String[] sourceFiles = new String[] {
-                "./src/test/java/com/github/markusbernhardt/xmldoclet/simpledata/Enum4.java"};
-        Root rootNode =
-                executeJavadoc(null, null, null, sourceFiles, null, new String[] {"-dryrun"});
+        final var javaDocElements = newJavaDocElements("Enum4.java");
+        final var packageNode = javaDocElements.packageNode();
+        final Enum enumNode = packageNode.getEnum().getFirst();
 
-        Package packageNode = rootNode.getPackage().get(0);
-        Enum enumNode = packageNode.getEnum().get(0);
-
-        EnumConstant enumConstantNode = enumNode.getConstant().get(0);
+        final EnumConstant enumConstantNode = enumNode.getConstant().getFirst();
         assertEquals(enumConstantNode.getComment(), "field1");
     }
 
@@ -115,15 +86,11 @@ public class EnumTest extends AbstractTestParent {
      */
     @Test
     public void testEnum5() {
-        String[] sourceFiles = new String[] {
-                "./src/test/java/com/github/markusbernhardt/xmldoclet/simpledata/Enum5.java"};
-        Root rootNode =
-                executeJavadoc(null, null, null, sourceFiles, null, new String[] {"-dryrun"});
-
-        Package packageNode = rootNode.getPackage().get(0);
-        Enum enumNode = packageNode.getEnum().get(0);
+        final var javaDocElements = newJavaDocElements("Enum5.java");
+        final var packageNode = javaDocElements.packageNode();
+        final Enum enumNode = packageNode.getEnum().getFirst();
         assertEquals(enumNode.getAnnotation().size(), 1);
-        AnnotationInstance annotationInstanceNode = enumNode.getAnnotation().get(0);
+        AnnotationInstance annotationInstanceNode = enumNode.getAnnotation().getFirst();
         assertEquals(annotationInstanceNode.getQualified(), "java.lang.Deprecated");
     }
 
@@ -132,29 +99,24 @@ public class EnumTest extends AbstractTestParent {
      */
     @Test
     public void testEnum6() {
-        String[] sourceFiles = new String[] {
-                "./src/test/java/com/github/markusbernhardt/xmldoclet/simpledata/Enum6.java"};
-        Root rootNode =
-                executeJavadoc(null, null, null, sourceFiles, null, new String[] {"-dryrun"});
-
-        Package packageNode = rootNode.getPackage().get(0);
-        Enum enumNode = packageNode.getEnum().get(0);
+        final var javaDocElements = newJavaDocElements("Enum6.java");
+        final var packageNode = javaDocElements.packageNode();
+        final Enum enumNode = packageNode.getEnum().getFirst();
         assertEquals(enumNode.getAnnotation().size(), 2);
 
-        AnnotationInstance annotationInstanceNode = enumNode.getAnnotation().get(0);
-        assertEquals(annotationInstanceNode.getQualified(), "java.lang.Deprecated");
-        assertEquals(annotationInstanceNode.getName(), "Deprecated");
-        assertEquals(annotationInstanceNode.getArgument().size(), 0);
+        final AnnotationInstance annotationInstance1 = enumNode.getAnnotation().get(0);
+        assertEquals(annotationInstance1.getQualified(), "java.lang.Deprecated");
+        assertEquals(annotationInstance1.getName(), "Deprecated");
+        assertEquals(annotationInstance1.getArgument().size(), 0);
 
-        annotationInstanceNode = enumNode.getAnnotation().get(1);
-        assertEquals(annotationInstanceNode.getQualified(), Annotation12.class.getName());
-        assertEquals(annotationInstanceNode.getName(), Annotation12.class.getSimpleName());
-        assertEquals(annotationInstanceNode.getArgument().size(), 1);
+        final var annotationInstance2 = enumNode.getAnnotation().get(1);
+        assertEquals(annotationInstance2.getQualified(), Annotation12.class.getName());
+        assertEquals(annotationInstance2.getName(), Annotation12.class.getSimpleName());
+        assertEquals(annotationInstance2.getArgument().size(), 1);
 
-        AnnotationArgument annotationArgumentNode = annotationInstanceNode.getArgument().get(0);
+        final AnnotationArgument annotationArgumentNode = annotationInstance2.getArgument().getFirst();
         assertEquals(annotationArgumentNode.getName(), "value");
-        assertEquals(annotationArgumentNode.getValue().get(0), "mister");
+        assertEquals(annotationArgumentNode.getValue().getFirst(), "mister");
 
     }
-
 }
