@@ -1,12 +1,5 @@
 package com.github.markusbernhardt.xmldoclet;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertNull;
-import static org.junit.Assert.assertTrue;
-
-import org.junit.Test;
-
 import com.github.markusbernhardt.xmldoclet.simpledata.Interface1;
 import com.github.markusbernhardt.xmldoclet.simpledata.Interface2;
 import com.github.markusbernhardt.xmldoclet.simpledata.Interface3;
@@ -14,41 +7,29 @@ import com.github.markusbernhardt.xmldoclet.simpledata.Interface4;
 import com.github.markusbernhardt.xmldoclet.xjc.AnnotationInstance;
 import com.github.markusbernhardt.xmldoclet.xjc.Interface;
 import com.github.markusbernhardt.xmldoclet.xjc.Method;
-import com.github.markusbernhardt.xmldoclet.xjc.Package;
-import com.github.markusbernhardt.xmldoclet.xjc.Root;
 import com.github.markusbernhardt.xmldoclet.xjc.TypeParameter;
+import org.junit.Test;
+
+import static org.junit.Assert.*;
 
 /**
  * Unit test group for Interfaces
  */
 @SuppressWarnings("deprecation")
-public class InterfaceTest extends AbstractTestParent {
-
-    /**
-     * Rigourous Parser :-)
-     */
-    @Test
-    public void testSampledoc() {
-        executeJavadoc(".", new String[] {"./src/test/java"}, null, null, new String[] {"com"},
-                new String[] {"-dryrun"});
-    }
-
+public class InterfaceTest extends AbstractTest {
     /**
      * testing a interface with nothing defined
      */
     @Test
     public void testInterface1() {
-        String[] sourceFiles = new String[] {
-                "./src/test/java/com/github/markusbernhardt/xmldoclet/simpledata/Interface1.java"};
-        Root rootNode =
-                executeJavadoc(null, null, null, sourceFiles, null, new String[] {"-dryrun"});
-
-        Package packageNode = rootNode.getPackage().get(0);
-        Interface interfaceNode = packageNode.getInterface().get(0);
+        final var javaDocElements = newJavaDocElements("Interface1.java");
+        final var rootNode = javaDocElements.rootNode();
+        final var packageNode = javaDocElements.packageNode();
+        final Interface interfaceNode = packageNode.getInterface().getFirst();
 
         assertEquals(rootNode.getPackage().size(), 1);
         assertNull(packageNode.getComment());
-        assertEquals(packageNode.getName(), "com.github.markusbernhardt.xmldoclet.simpledata");
+        assertEquals(packageNode.getName(), SIMPLE_DATA_PACKAGE);
         assertEquals(packageNode.getAnnotation().size(), 0);
         assertEquals(packageNode.getEnum().size(), 0);
         assertEquals(packageNode.getInterface().size(), 1);
@@ -69,18 +50,15 @@ public class InterfaceTest extends AbstractTestParent {
      */
     @Test
     public void testInterface2() {
-        String[] sourceFiles = new String[] {
-                "./src/test/java/com/github/markusbernhardt/xmldoclet/simpledata/Interface2.java"};
-        Root rootNode =
-                executeJavadoc(null, null, null, sourceFiles, null, new String[] {"-dryrun"});
-
-        Package packageNode = rootNode.getPackage().get(0);
-        Interface interfaceNode = packageNode.getInterface().get(0);
-        Method method = interfaceNode.getMethod().get(0);
+        final var javaDocElements = newJavaDocElements("Interface2.java");
+        final var rootNode = javaDocElements.rootNode();
+        final var packageNode = javaDocElements.packageNode();
+        final Interface interfaceNode = packageNode.getInterface().getFirst();
+        final Method method = interfaceNode.getMethod().getFirst();
 
         assertEquals(rootNode.getPackage().size(), 1);
         assertNull(packageNode.getComment());
-        assertEquals(packageNode.getName(), "com.github.markusbernhardt.xmldoclet.simpledata");
+        assertEquals(packageNode.getName(), SIMPLE_DATA_PACKAGE);
         assertEquals(packageNode.getAnnotation().size(), 0);
         assertEquals(packageNode.getEnum().size(), 0);
         assertEquals(packageNode.getInterface().size(), 1);
@@ -104,8 +82,7 @@ public class InterfaceTest extends AbstractTestParent {
         assertFalse(method.isStatic());
         assertFalse(method.isSynchronized());
         assertFalse(method.isVarArgs());
-        assertEquals(method.getQualified(),
-                "com.github.markusbernhardt.xmldoclet.simpledata.Interface2.method1");
+        assertEquals(method.getQualified(), getElementPathFromSimpleDataPackage("Interface2.method1"));
         assertEquals(method.getScope(), "public");
         assertEquals(method.getAnnotation().size(), 0);
         assertEquals(method.getParameter().size(), 0);
@@ -118,17 +95,14 @@ public class InterfaceTest extends AbstractTestParent {
      */
     @Test
     public void testInterface3() {
-        String[] sourceFiles = new String[] {
-                "./src/test/java/com/github/markusbernhardt/xmldoclet/simpledata/Interface3.java"};
-        Root rootNode =
-                executeJavadoc(null, null, null, sourceFiles, null, new String[] {"-dryrun"});
-
-        Package packageNode = rootNode.getPackage().get(0);
-        Interface interfaceNode = packageNode.getInterface().get(0);
+        final var javaDocElements = newJavaDocElements("Interface3.java");
+        final var rootNode = javaDocElements.rootNode();
+        final var packageNode = javaDocElements.packageNode();
+        final Interface interfaceNode = packageNode.getInterface().getFirst();
 
         assertEquals(rootNode.getPackage().size(), 1);
         assertNull(packageNode.getComment());
-        assertEquals(packageNode.getName(), "com.github.markusbernhardt.xmldoclet.simpledata");
+        assertEquals(packageNode.getName(), SIMPLE_DATA_PACKAGE);
         assertEquals(packageNode.getAnnotation().size(), 0);
         assertEquals(packageNode.getEnum().size(), 0);
         assertEquals(packageNode.getInterface().size(), 1);
@@ -144,8 +118,7 @@ public class InterfaceTest extends AbstractTestParent {
         assertTrue(interfaceNode.isIncluded());
 
         // verify interface
-        assertEquals(interfaceNode.getInterface().get(0).getQualified(),
-                java.io.Serializable.class.getName());
+        assertEquals(interfaceNode.getInterface().getFirst().getQualified(), java.io.Serializable.class.getName());
     }
 
     /**
@@ -153,18 +126,15 @@ public class InterfaceTest extends AbstractTestParent {
      */
     @Test
     public void testInterface4() {
-        String[] sourceFiles = new String[] {
-                "./src/test/java/com/github/markusbernhardt/xmldoclet/simpledata/Interface4.java"};
-        Root rootNode =
-                executeJavadoc(null, null, null, sourceFiles, null, new String[] {"-dryrun"});
-
-        Package packageNode = rootNode.getPackage().get(0);
-        Interface interfaceNode = packageNode.getInterface().get(0);
-        AnnotationInstance annotationInstanceNode = interfaceNode.getAnnotation().get(0);
+        final var javaDocElements = newJavaDocElements("Interface4.java");
+        final var rootNode = javaDocElements.rootNode();
+        final var packageNode = javaDocElements.packageNode();
+        final Interface interfaceNode = packageNode.getInterface().getFirst();
+        final AnnotationInstance annotationInstanceNode = interfaceNode.getAnnotation().getFirst();
 
         assertEquals(rootNode.getPackage().size(), 1);
         assertNull(packageNode.getComment());
-        assertEquals(packageNode.getName(), "com.github.markusbernhardt.xmldoclet.simpledata");
+        assertEquals(packageNode.getName(), SIMPLE_DATA_PACKAGE);
         assertEquals(packageNode.getAnnotation().size(), 0);
         assertEquals(packageNode.getEnum().size(), 0);
         assertEquals(packageNode.getInterface().size(), 1);
@@ -191,18 +161,15 @@ public class InterfaceTest extends AbstractTestParent {
      */
     @Test
     public void testInterface5() {
-        String[] sourceFiles = new String[] {
-                "./src/test/java/com/github/markusbernhardt/xmldoclet/simpledata/Interface5.java"};
-        Root rootNode =
-                executeJavadoc(null, null, null, sourceFiles, null, new String[] {"-dryrun"});
-
-        Package packageNode = rootNode.getPackage().get(0);
-        Interface interfaceNode = packageNode.getInterface().get(0);
-        Method method = interfaceNode.getMethod().get(0);
+        final var javaDocElements = newJavaDocElements("Interface5.java");
+        final var rootNode = javaDocElements.rootNode();
+        final var packageNode = javaDocElements.packageNode();
+        final Interface interfaceNode = packageNode.getInterface().getFirst();
+        Method method = interfaceNode.getMethod().getFirst();
 
         assertEquals(rootNode.getPackage().size(), 1);
         assertNull(packageNode.getComment());
-        assertEquals(packageNode.getName(), "com.github.markusbernhardt.xmldoclet.simpledata");
+        assertEquals(packageNode.getName(), SIMPLE_DATA_PACKAGE);
         assertEquals(packageNode.getAnnotation().size(), 0);
         assertEquals(packageNode.getEnum().size(), 0);
         assertEquals(packageNode.getInterface().size(), 1);
@@ -210,8 +177,7 @@ public class InterfaceTest extends AbstractTestParent {
 
         assertEquals(interfaceNode.getComment(), "Interface5");
         assertEquals(interfaceNode.getName(), "Interface5");
-        assertEquals(interfaceNode.getQualified(),
-                "com.github.markusbernhardt.xmldoclet.simpledata.Interface5");
+        assertEquals(interfaceNode.getQualified(), getElementPathFromSimpleDataPackage("Interface5"));
         assertEquals(interfaceNode.getScope(), "");
         assertEquals(interfaceNode.getMethod().size(), 1);
         assertEquals(interfaceNode.getAnnotation().size(), 0);
@@ -227,8 +193,7 @@ public class InterfaceTest extends AbstractTestParent {
         assertFalse(method.isStatic());
         assertFalse(method.isSynchronized());
         assertFalse(method.isVarArgs());
-        assertEquals(method.getQualified(),
-                "com.github.markusbernhardt.xmldoclet.simpledata.Interface5.method1");
+        assertEquals(method.getQualified(), getElementPathFromSimpleDataPackage("Interface5.method1"));
 
         // all interface methods are public
         assertEquals(method.getScope(), "public");
@@ -242,18 +207,15 @@ public class InterfaceTest extends AbstractTestParent {
      */
     @Test
     public void testInterface6() {
-        String[] sourceFiles = new String[] {
-                "./src/test/java/com/github/markusbernhardt/xmldoclet/simpledata/Interface6.java"};
-        Root rootNode =
-                executeJavadoc(null, null, null, sourceFiles, null, new String[] {"-dryrun"});
-
-        Package packageNode = rootNode.getPackage().get(0);
-        Interface interfaceNode = packageNode.getInterface().get(0);
-        TypeParameter typeParameterNode = interfaceNode.getGeneric().get(0);
+        final var javaDocElements = newJavaDocElements("Interface6.java");
+        final var rootNode = javaDocElements.rootNode();
+        final var packageNode = javaDocElements.packageNode();
+        final Interface interfaceNode = packageNode.getInterface().getFirst();
+        final TypeParameter typeParameterNode = interfaceNode.getGeneric().getFirst();
 
         assertEquals(rootNode.getPackage().size(), 1);
         assertNull(packageNode.getComment());
-        assertEquals(packageNode.getName(), "com.github.markusbernhardt.xmldoclet.simpledata");
+        assertEquals(packageNode.getName(), SIMPLE_DATA_PACKAGE);
         assertEquals(packageNode.getAnnotation().size(), 0);
         assertEquals(packageNode.getEnum().size(), 0);
         assertEquals(packageNode.getInterface().size(), 1);
@@ -261,8 +223,7 @@ public class InterfaceTest extends AbstractTestParent {
 
         assertEquals(interfaceNode.getComment(), "Interface6");
         assertEquals(interfaceNode.getName(), "Interface6");
-        assertEquals(interfaceNode.getQualified(),
-                "com.github.markusbernhardt.xmldoclet.simpledata.Interface6");
+        assertEquals(interfaceNode.getQualified(), getElementPathFromSimpleDataPackage("Interface6"));
         assertEquals(interfaceNode.getScope(), "public");
         assertEquals(interfaceNode.getMethod().size(), 0);
         assertEquals(interfaceNode.getAnnotation().size(), 0);
@@ -278,18 +239,15 @@ public class InterfaceTest extends AbstractTestParent {
      */
     @Test
     public void testInterface7() {
-        String[] sourceFiles = new String[] {
-                "./src/test/java/com/github/markusbernhardt/xmldoclet/simpledata/Interface7.java"};
-        Root rootNode =
-                executeJavadoc(null, null, null, sourceFiles, null, new String[] {"-dryrun"});
-
-        Package packageNode = rootNode.getPackage().get(0);
-        Interface interfaceNode = packageNode.getInterface().get(0);
-        TypeParameter typeParameterNode = interfaceNode.getGeneric().get(0);
+        final var javaDocElements = newJavaDocElements("Interface7.java");
+        final var rootNode = javaDocElements.rootNode();
+        final var packageNode = javaDocElements.packageNode();
+        final Interface interfaceNode = packageNode.getInterface().getFirst();
+        final TypeParameter typeParameterNode = interfaceNode.getGeneric().getFirst();
 
         assertEquals(rootNode.getPackage().size(), 1);
         assertNull(packageNode.getComment());
-        assertEquals(packageNode.getName(), "com.github.markusbernhardt.xmldoclet.simpledata");
+        assertEquals(packageNode.getName(), SIMPLE_DATA_PACKAGE);
         assertEquals(packageNode.getAnnotation().size(), 0);
         assertEquals(packageNode.getEnum().size(), 0);
         assertEquals(packageNode.getInterface().size(), 1);
@@ -297,8 +255,7 @@ public class InterfaceTest extends AbstractTestParent {
 
         assertEquals(interfaceNode.getComment(), "Interface7");
         assertEquals(interfaceNode.getName(), "Interface7");
-        assertEquals(interfaceNode.getQualified(),
-                "com.github.markusbernhardt.xmldoclet.simpledata.Interface7");
+        assertEquals(interfaceNode.getQualified(), getElementPathFromSimpleDataPackage("Interface7"));
         assertEquals(interfaceNode.getScope(), "public");
         assertEquals(interfaceNode.getMethod().size(), 0);
         assertEquals(interfaceNode.getAnnotation().size(), 0);
@@ -306,7 +263,7 @@ public class InterfaceTest extends AbstractTestParent {
         assertTrue(interfaceNode.isIncluded());
 
         assertEquals(typeParameterNode.getBound().size(), 1);
-        assertEquals(typeParameterNode.getBound().get(0), "java.lang.Number");
+        assertEquals(typeParameterNode.getBound().getFirst(), "java.lang.Number");
     }
 
     /**
@@ -314,18 +271,15 @@ public class InterfaceTest extends AbstractTestParent {
      */
     @Test
     public void testInterface8() {
-        String[] sourceFiles = new String[] {
-                "./src/test/java/com/github/markusbernhardt/xmldoclet/simpledata/Interface8.java"};
-        Root rootNode =
-                executeJavadoc(null, null, null, sourceFiles, null, new String[] {"-dryrun"});
-
-        Package packageNode = rootNode.getPackage().get(0);
-        Interface interfaceNode = packageNode.getInterface().get(0);
-        TypeParameter typeParameterNode = interfaceNode.getGeneric().get(0);
+        final var javaDocElements = newJavaDocElements("Interface8.java");
+        final var rootNode = javaDocElements.rootNode();
+        final var packageNode = javaDocElements.packageNode();
+        final Interface interfaceNode = packageNode.getInterface().getFirst();
+        TypeParameter typeParameterNode = interfaceNode.getGeneric().getFirst();
 
         assertEquals(rootNode.getPackage().size(), 1);
         assertNull(packageNode.getComment());
-        assertEquals(packageNode.getName(), "com.github.markusbernhardt.xmldoclet.simpledata");
+        assertEquals(packageNode.getName(), SIMPLE_DATA_PACKAGE);
         assertEquals(packageNode.getAnnotation().size(), 0);
         assertEquals(packageNode.getEnum().size(), 0);
         assertEquals(packageNode.getInterface().size(), 1);
@@ -333,8 +287,7 @@ public class InterfaceTest extends AbstractTestParent {
 
         assertEquals(interfaceNode.getComment(), "Interface8");
         assertEquals(interfaceNode.getName(), "Interface8");
-        assertEquals(interfaceNode.getQualified(),
-                "com.github.markusbernhardt.xmldoclet.simpledata.Interface8");
+        assertEquals(interfaceNode.getQualified(), getElementPathFromSimpleDataPackage("Interface8"));
         assertEquals(interfaceNode.getScope(), "public");
         assertEquals(interfaceNode.getMethod().size(), 0);
         assertEquals(interfaceNode.getAnnotation().size(), 0);
